--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="wasm_exec.js"></script>
+        <script src="wasm_exec.js"></script>
+        <title>WASM test! - jc01.ninja</title>
 		<script>
 			const go = new Go();
 			WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
